Fix Chrome on iOS: hack to get image size was not working.  Better style now anyway. Also, slight change to the initial placement of the picture as it loads making the resize less ugly.

--- a/app/styles/yagallery.scss
+++ b/app/styles/yagallery.scss
@@ -12,6 +12,7 @@ body {
 
 #main-photo-container {
     position: fixed;
+    height: 100%;
     left: 50%;
     top: 50%;
     /*border: none;*/
